style.css
/* ... */
.bg-white {
  background-color: var(--color-white);
}

.bg-n1 {
  background-color: var(--color-n1);
}

.bg-n2 {
  background-color: var(--color-n2);
}

.bg-n3 {
  background-color: var(--color-n3);
}

.bg-n4 {
  background-color: var(--color-n4);
}

.bg-forest {
  background-color: var(--color-forest);
}

.bg-sage {
  background-color: var(--color-sage);
}

.bg-sky {
  background-color: var(--color-sky);
}

.bg-blue {
  background-color: var(--color-blue);
}

.bg-purple {
  background-color: var(--color-purple);
}

.n1 {
  color: var(--color-n1);
}

.n5 {
  color: var(--color-n5);
}

.n6 {
  color: var(--color-n6);
}

.forest {
  color: var(--color-forest);
}

.sage {
  color: var(--color-sage);
}

.blue {
  color: var(--color-blue);
}

.purple {
  color: var(--color-purple);
}

/* Icons and Images */
.image-container {
  width: fit-content;
  height: fit-content;
  border-radius: 16px;
  overflow: hidden;
}

.about-image-small {
  width: 160px;
  height: 160px;
  border-radius: 8px;
  overflow: hidden;
}

.about-image-large {
  width: 280px;
  height: 280px;
  border-radius: 16px;
  overflow: hidden;
  margin-top: calc(70vh - 280px - 13rem);
}

.play-image-large {
  width: 24vw;
  height: auto;
  border-radius: 16px;
  overflow: hidden;
  margin-top: 4.5rem; /* calc(85vh - 280px - 8rem) */
}

@media (max-width: 1280px) {
  .about-image-large {
    width: 100%;
    height: auto;
    margin-top: calc(70vh - 100% - 10rem);
  }

  .play-image-large {
    display: none;
  }

  #about-page .two-column-sticky-scroll {
    gap: 6rem;
  }

  #about-description {
    text-align: left !important;
  }

  /* 2. ENABLE WRAPPING on the main container */
  #play-page .two-column-sticky-scroll {
    display: block !important;
  }

  #play-page .sticky-column, 
  #play-page .scrolling-column {
    width: 100% !important;
    position: static !important;
    height: auto !important;
    margin: 0 !important;
    padding: 0 !important;
  }

  #play-page .scrolling-column {
    margin-top: 1rem !important;
  }

  .mobile-hide {
    display: none;
  }
  
  /* 5. PROJECT LIST WRAPPER: Force it onto a new line and make it 100% width */
  .play-projects-wrapper {
    /* 🔑 KEY FIX: Force a line break */
    width: 100%;
    margin-top: 0 !important;
    flex: none !important; 
  }
}

@media (max-width: 992px) {

  #about-page .two-column-sticky-scroll {
    display: block !important;
  }

  #about-page .sticky-column {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    vertical-align: top;
    gap: 2rem;
    position: static !important;
  }

  .about-image-large {
    flex: 0 0 35%; 
    width: 35%;
    height: auto !important;
    margin-top: 0;
    margin-bottom: 4rem;
  }

  #about-page .sticky-column, 
  #about-page .scrolling-column {
    width: 100% !important;
    position: static !important;
    height: auto !important;
    margin: 0 !important;
    padding: 0 !important;
  }

  #about-page .scrolling-column {
    margin-top: 1rem !important;
  }
}

@media (max-width: 768px) {
  #about-page .sticky-column {
    display: block;
    gap: 4rem;
  } 

  .about-image-large {
    width: 100%;
    height: auto !important;
    margin-top: 4rem;
    margin-bottom: 4rem;
  }
}

@media (max-width: 480px) {

  .divider {
    margin-top: 3rem !important;
    margin-bottom: 3rem !important;
  }

  .mt-50, .mt-60 {
    margin-top: 3rem !important;
  }

  .mb-50, .mb-60 {
    margin-bottom: 3rem !important;
  }

  .mb-80 {
    margin-bottom: 4rem !important;
  }

  .sbs-align-bottom {
    flex-direction: column;
    gap: 0.75rem !important;
  }

  #customer-quote {
    flex-direction: column !important;
    gap: 1rem;
  }

  section {
    padding: 2.5rem 2.5rem !important;
  }

  #title {
    margin-top: 1rem;
  }

  #play-page {
    margin-top: 5rem;
  }

  #about-page {
    margin-top: 5rem;
  }

  h1 {
    font-size: 4rem !important;
    line-height: 5.5rem !important;
    letter-spacing: -0.1rem !important;
  }

  h2 {
    font-size: 3rem !important;
    line-height: 4rem !important;
    letter-spacing: -0.04rem;
  }

  .underline {
    text-decoration: underline var(--color-n5) !important;
    text-decoration-thickness: 1px !important;
    text-underline-offset: 6px !important;
  }
}

svg {
  display: block;
}

.icon-forest {
  background-color: var(--color-sage);;
  color: var(--color-forest);;
  padding: 10px;
  border-radius: 6px;
}

.icon-forest:hover {
  background-color: var(--color-n5);
  color: var(--color-n2);
  cursor: pointer;
  transition: color 0.2s ease, background-color 0.2s ease;
}

.icon-n5 {
  background-color: var(--color-n3);
  color: var(--color-n5);
  padding: 10px;
  border-radius: 6px;
}

.icon-n5:hover {
  background-color: var(--color-n5);
  color: var(--color-n2);
  cursor: pointer;
  transition: color 0.2s ease, background-color 0.2s ease;
}
  
/* Basic Typography & Layout */
body {
  font-family: "Geist", sans-serif;
  font-optical-sizing: auto;
  font-weight: 300;
  font-style: normal;
  line-height: 1.6;
  font-size: 1.125rem;
  background-color: var(--color-n1);
  color: var(--color-n6);
  padding: 0 0rem;
}

/* Header Styling */
header {
  padding: 0;
  text-align: center;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 1000;
}

/* Navigation Bar */
.navbar {
  display: flex;
  justify-content: space-between;
  vertical-align: middle;
  align-items: center;
  background-color: var(--color-n1);
  padding: 2rem 6rem 2rem;
}

/* .case-study .navbar {
  background-color: transparent;
} */
/* ... */

